# ai-test-generator

./: .aitestrc  .env.example  .gitignore  README.md  ai_test_generator.py  batch_config.yaml  my_framework_rules.txt  pyproject.toml  requirements.txt
.claude/: settings.local.json
generated_tests/: test_put_api_v3_pet.py
