[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["ai_test_generator"]

[project]
name = "ai-test-generator"
version = "0.3.0"
description = "Generate production-ready Pytest test cases from any URL, OpenAPI spec, or Postman collection using AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["qa", "automation", "testing", "pytest", "playwright", "ai", "openai", "groq", "ollama", "openapi", "postman", "security", "owasp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Testing",
    "Intended Audience :: Developers",
]
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "playwright>=1.42.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "allure-pytest>=2.13.5",
]

[project.scripts]
ai-test-gen = "ai_test_generator:main"

[project.urls]
Homepage = "https://github.com/your-username/ai-test-generator"
Issues = "https://github.com/your-username/ai-test-generator/issues"
